# Bank-API

./: .gitignore  README.md  docker-compose-parser.yaml  docker-compose-unit-test.yaml  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/bank_api/: db.py  main.py  models.py
backend/src/data_parser/: parser.py
backend/src/tests/: conftest.py  test_api.py  testdb.py
