[project]
name = "Bank-API"
version = "0.1.0"
description = "Requirements for the Bank API"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "sqlalchemy==2.0.40",
    "psycopg2-binary==2.9.10",
    "dotenv"
]

[project.optional-dependencies]
unit_tests = [
    "pytest==8.1.1",
    "pytest-flask==1.3.0"
]